// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5p uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
            >
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_1_"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                    for="_r_1_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_4_"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                    for="_r_4_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5p uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
            >
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_8_"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                    for="_r_8_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_b_"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow3f"
                    for="_r_b_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
